# Eluna

./: AuraMethods.h  BattleGroundHooks.cpp  BindingMap.h  CMakeLists.txt  CreatureHooks.cpp  CreatureMethods.h  ElunaCreatureAI.h  ElunaInstanceAI.cpp  ElunaTemplate.h  GameObjectHooks.cpp  GroupHooks.cpp  GroupMethods.h  GuildHooks.cpp  HookHelpers.h  Hooks.h  InstanceHooks.cpp  ItemHooks.cpp  LuaFunctions.cpp  MapMethods.h  ObjectMethods.h  PacketHooks.cpp  PlayerHooks.cpp  PlayerMethods.h  QuestMethods.h  ServerHooks.cpp  VehicleHooks.cpp  VehicleMethods.h  WorldObjectMethods.h
AzerothCore/: BattleGroundMethods.h  GameObjectMethods.h  GlobalMethods.h  GuildMethods.h
CMangos/: ElunaQueryMethods.h  ItemMethods.h  UnitMethods.h  WorldPacketMethods.h
Mangos/: AuraMethods.h  BattleGroundMethods.h  CorpseMethods.h  CreatureMethods.h  ElunaQueryMethods.h  GameObjectMethods.h  GlobalMethods.h  GroupMethods.h  GuildMethods.h  ItemMethods.h  MapMethods.h  ObjectMethods.h  PlayerMethods.h  QuestMethods.h  SpellMethods.h  UnitMethods.h  VehicleMethods.h  WorldObjectMethods.h  WorldPacketMethods.h
TrinityCore/: AuraMethods.h  BattleGroundMethods.h  CorpseMethods.h  CreatureMethods.h  ElunaQueryMethods.h  GameObjectMethods.h  GlobalMethods.h  GroupMethods.h  GuildMethods.h  ItemMethods.h  MapMethods.h  ObjectMethods.h  PlayerMethods.h  QuestMethods.h  SpellMethods.h  UnitMethods.h  VehicleMethods.h  WorldObjectMethods.h  WorldPacketMethods.h
